data/derived/fa15/progs/unify/prog3839.ml.out
Characters 81-84:
  | Sine(e) -> sin(eval(e))
                       ^^^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'a
